--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,34 @@
 {
   "compilerOptions": {
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@/*": [
+        "src/*"
+      ],
+      "styles/*": [
+        "src/assets/styles/*"
+      ],
+      "components/*": [
+        "src/components/*"
+      ],
+      "views/*": [
+        "src/views/*"
+      ],
+      "types/*": [
+        "src/types/*"
+      ],
+      "images/*": [
+        "src/assets/images/*"
+      ],
+      "config/*": [
+        "src/config/*"
+      ]
     }
   }
 }
