--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^22.10.1",
     "ant-design-vue": "^4.2.6",
     "axios": "^1.7.8",
+    "github-markdown-css": "^5.8.1",
     "pinia": "^2.2.8",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "sass": "^1.81.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
